2007-08-08  Andreas Kupries  <andreask@activestate.com>

	* inplace.test: Fixed failures of some tests on Windows.

	* fileutil.tcl: Working around a possible bug in the handling of
	  path intreps by the core, on Windows. See commentary in
	  'fullnormalize', and 'find.setup' (f_setupcircle).

	* find.test: Moved the support code into a separate file, the new
	* find.setup: 'find.setup'. Added a testsuite for the package
	* traverse.test: 'fileutil::traverse', using the same support
	* traverse.tcl: code. Rewrote the internals of traverse.tcl based
	* traverse.man: on the experience gained by the rewrite of 'find',
	* pkgIndex.tcl: using similar re-focatorization of the platform
	  and core dependencies, and made the traversal state variables
	  easier to understand (separated the processing and result
	  stack). Bumped version of traverse to 0.3.

2007-08-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* find.test: Reworked the setup/cleanup code, made the tests more
	  independent from each other.

	* traverse.man: New file, first documentation for
	  fileutil::traverse.

2007-08-07  Andreas Kupries  <andreask@activestate.com>

	* fileutil.tcl (::fileutil::find): Command rewritten to use a
	* pkgIndex.tcl: portable iterative traversal core. Platform and
	* fileutil.man: Tcl version dependencies have been re-factored
	  into separate small commands. Should be more readable and
	  maintainable. Handling of circular symbolic links is now
	  portable (via a portable 'file normalize'). Order of paths in
	  the output changed, this however was never documented. Version
	  bumped to 1.13.2.

2007-08-03  Andreas Kupries  <andreask@activestate.com>

	* fileutil.test: Cleaned the setup/cleanup code up a bit.

	* filetype.test: Split the overly large file fileutil.test
	* fileutil.test: into a series of smaller test files for
	* find.test: specific commands.
	* inplace.test:
	* pathops.test:
	* strip.test:
	* test.test:
