@@ -1,9 +1,9 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin fileutil n 1.13.1]
+[manpage_begin fileutil n 1.13.3]
 [moddesc   {file utilities}]
 [titledesc {Procedures implementing some file utilities}]
 [require Tcl 8]
-[require fileutil [opt 1.13.1]]
+[require fileutil [opt 1.13.3]]
 [description]
 [keywords {file utilities} touch grep type {temp file} test cat]
 [para]
